Fixed some alignments

--- a/css/header-styles.css
+++ b/css/header-styles.css
@@ -3,8 +3,8 @@
     display: grid;
     grid-template-rows: 1fr 3fr;
     padding: 20px 40px 0px;
-    margin-bottom: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .rowOne {
