--- a/css/main-content-styles.css
+++ b/css/main-content-styles.css
@@ -2,9 +2,10 @@
 .main {
     display: grid;
     grid-template-columns: 3.5fr 1fr;
+    grid-template-rows: 1fr;
     padding: 30px 20px;
     column-gap: 20px;
-    background-color: whitesmoke;
+    background-color: #dbeafe;
 }
 
 .projects .card-container {
@@ -15,7 +16,8 @@
 }
 
 .card-container .card {
-    width: 400px;
+    width: 100%;
+    min-width: 400px;
     height: 200px;
     display: flex;
     flex-direction: column;
@@ -26,7 +28,7 @@
     padding: 30px 20px;
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
     background-color: white;
-    transition: 0.1s;
+    transition: 0.2s;
 }
 
 .card-container .card:hover {
@@ -55,8 +57,7 @@
 
 .main-rightSideBar {
     display: grid;
-    align-content: start;
-    row-gap: 40px;
+    align-content: space-between;
 }
 
 .main-rightSideBar .sideCard {
