--- a/css/sidebar-styles.css
+++ b/css/sidebar-styles.css
@@ -6,7 +6,7 @@
     row-gap: 40px;
     padding: 20px;
     z-index: 1;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 4px 0px 12px rgba(0, 0, 0, 0.2);
 }
 
 .title {
@@ -39,7 +39,7 @@
     align-items: center;
     margin-bottom: 20px;
     font-weight: 600;
-    transition: 0.1s;
+    transition: 0.2s;
 }
 
 .sidebar a {
@@ -48,5 +48,6 @@
 }
 
 .sidebar li:hover {
+    background-color: rgba(255, 255, 255, 0.1);
     transform: scale(1.1);
 }
